tests/error/type_errors/if_expr_not_bool.err
Error: Not truthy (at $FILE:12:16)
   | 
10 | @guppy(module)
11 | def foo(x: NonBool) -> int:
12 |     return 1 if x else 0
   |                 ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
